--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "public",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
