changed app target

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "project-scran"
-  }
+  },
+  "targets": {
+    "project-scran": {
+      "hosting": {
+        "scran-vite": [
+          "1:85753190958:web:d0197ce2953cbc98495dbf"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
