updated hosting site

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,8 @@
     "project-scran": {
       "hosting": {
         "scran-vite": [
-          "1:85753190958:web:d0197ce2953cbc98495dbf"
+          "1:85753190958:web:d0197ce2953cbc98495dbf",
+          "scran-vite"
         ]
       }
     }
