--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest --reporter verbose"
   },
   "dependencies": {
     "firebase": "^10.1.0",
@@ -22,6 +22,6 @@
     "vitawind": "^2.2.4",
     "vite": "^4.4.8",
     "vite-plugin-pwa": "^0.16.4",
-    "vitest": "^0.34.0"
+    "vitest": "^0.34.1"
   }
 }
