--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.3.1",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
