--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "algoliasearch": "^4.19.1",
     "firebase": "^10.1.0",
     "firebase-admin": "^11.10.1",
     "firebase-functions": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-instantsearch": "^7.0.1",
     "react-router-dom": "^6.14.2",
     "react-share": "^4.4.1"
   },
