Added Cypress Tests

--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.4",
     "@vitest/coverage-v8": "^0.34.1",
-    "better-docs": "^2.7.2",
+    "cypress": "^12.17.4",
     "daisyui": "^3.5.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "start-server-and-test": "^2.0.0",
     "taffydb": "^2.7.3",
     "vitawind": "^2.2.4",
     "vite": "^4.4.8",
